# MaaRacingAssistant

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  debug.py  diagnose_coords.py  gui.py  main.py  opencv_utf8_patch.py  pyproject.toml  requirements.txt  run.py  update_log.md
.github/workflows/: release.yml
assets/resource/pipeline/: tasks.json
docs/: HANDOVER.md  update_log.md
maaracing_assistant/: __init__.py  __main__.py  controller.py  debug.py  gui.py  logger.py  navigation.py  pipeline_logger.py  racing_loop.py  window_utils.py  yolo_detector.py
tools/: alpha_analysis.py  analyze_record.py  analyze_record2.py  analyze_record3.py  auto_label.py  capture.py  dataset.yaml  train.py
