[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maaracing-assistant"
version = "0.6.0"
description = "《巅峰极速》极速狂飙自动刷分助手 — MAA Framework + YOLOv8 ONNX + vgamepad"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "onnxruntime-directml",
    "ultralytics",
    "vgamepad",
    "ttkbootstrap",
    "MaaFw",
]

[tool.setuptools.packages.find]
include = ["maaracing_assistant*"]
