[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maaracing-assistant"
dynamic = ["version"]
description = "《巅峰极速》极速狂飙自动刷分助手 — MAA Framework + YOLOv8 ONNX + vgamepad"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "onnxruntime-directml",
    "ultralytics",
    "vgamepad",
    "ttkbootstrap",
    "MaaFw",
]

[tool.setuptools.packages.find]
include = ["maaracing_assistant*"]

[tool.setuptools-scm]
write_to = "maaracing_assistant/_version.py"
